acción ingreso y salida historias laterales

--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -12,6 +12,9 @@
 /* Usage */
 section, div, span {
     @media @mobile {
+        .bg {
+            width: 55px !important;
+        }
         h1{
             font-size: 3em;
         }
