--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -155,8 +155,11 @@ b.primera {
 
 .section{
     video {
-        height: 100%;
-        width: auto;
+        min-height: 100%;
+        min-width: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
     }
     .playervideo video {
         height: 40vh;
