--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -26,6 +26,10 @@ h1{
     margin: 0px;
 }
 
+.hide{
+    opacity: 0;
+}
+
 /* INICIO >>> hacks estilos base */
 
 .ButtonCta--icon:hover {
@@ -581,6 +585,7 @@ section{
             margin-left: 0px;
             z-index: 1;
             position: fixed;
+            display: block;
             .boton{
                 background-color: transparent;
                 text-align: center;
