--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -68,6 +68,9 @@ section, div, span {
         b.primera{
             font-size: 10px;
         }
+        .bt-center{
+            left: 40vw;
+        }
     }
     @media @tablet {
       
