migración linda stereo

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -590,7 +590,7 @@ div#page_Animation {
             background-image: url('../caqueta/foto/museo-flip-caqueta-02.jpg');
         }
         &.lat_4{
-            background-image: url('../caqueta/foto/museo-flip-caqueta-03.jpg');
+            background-image: url('../caqueta/foto/museo-flip-caqueta-03.gif');
         }
         &.lat_5{
             background-image: url('../caqueta/foto/museo-flip-caqueta-04.jpg');
