ajutes navegacion teclado

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -167,8 +167,14 @@ b.primera {
     }
     .playervideo video {
         height: 40vh;
-        width: auto;
+        width: auto;  
+        
     }
+    #video_interno_6 video{
+        height: 40vh;
+        width: auto;  
+    }
+
     .btn{
         display: inline-block;
         height: 110px;
@@ -599,7 +605,7 @@ div#page_Animation {
             background-image: url('../caqueta/foto/museo-flip-caqueta-05.jpg');
         }
         &.lat_7{
-            background-image: url('../caqueta/foto/museo-flip-caqueta-06.jpg');
+            background-image: url('../caqueta/foto/museo-flip-caqueta-fondo07.jpg');
         }
         &.lat_8{
             background-image: url('../caqueta/foto/museo-flip-caqueta-07.jpg');
