elmuseo.html ok

--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -12,6 +12,10 @@
 /* Usage */
 section, div, span {
     @media @mobile {
+        #elmuseo .creditos .logos img {
+            display: block;
+        }
+
         .bg {
             width: 55px !important;
         }
