ajustes para players de video

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -156,15 +156,14 @@ b.primera {
     background-repeat: no-repeat;
     background-position: center;
 }
-
-.section{
-    video {
+.ComponentBg video {
         min-height: 100%;
         min-width: 100%;
         position: absolute;
         top: 0;
         bottom: 0;
-    }
+}
+.section{
     .playervideo video {
         height: 40vh;
         width: auto;  
