página de inicio

--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -15,7 +15,15 @@ section, div, span {
         #elmuseo .creditos .logos img {
             display: block;
         }
-
+        #overlay {
+            top: 20vh !important;
+            .minusculas {
+                font-size: 1.5em !important;
+            }
+            .mayusculas {
+                font-size: 3em !important;
+            }
+        }
         .bg {
             width: 55px !important;
         }
