contenido arauca ok

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -557,6 +557,38 @@ div#page_Animation {
 }
 
 #laterales_arauca{
+    .bg {
+        position: absolute;
+        width: 130px;
+        display: inline-block;
+        height: 100vh;
+        top: 0;
+        background-size: cover;
+        &.lat_2{
+            background-image: url('../arauca/foto/museo-flip-arauca-02.jpg');
+        }
+        &.lat_3{
+            background-image: url('../arauca/foto/museo-flip-arauca-03.jpg');
+        }
+        &.lat_4{
+            background-image: url('../arauca/foto/museo-flip-arauca-04.jpg');
+        }
+        &.lat_5{
+            background-image: url('../arauca/foto/museo-flip-arauca-05.jpg');
+        }
+        &.lat_6{
+            background-image: url('../arauca/foto/museo-flip-arauca-06.jpg');
+        }
+        &.lat_7{
+            background-image: url('../arauca/foto/museo-flip-arauca-fondo05.jpg');
+        }
+        &.lat_8{
+            background-image: url('../arauca/foto/museo-flip-arauca-08.jpg');
+        }
+        &.lat_9{
+            background-image: url('../arauca/foto/museo-flip-arauca-09.jpg');
+        }
+    }
     .story{
         &.profundizacion {
             background-image: url('../arauca/foto/museo-flip-arauca-02.jpg');
