contenido cordoba ok

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -497,10 +497,10 @@ div#page_Animation {
             position: absolute;
             z-index: 2;
             &._1{
-                background-image: url('../arauca/foto/museo-flip-arauca-intro-01.gif');
+                background-image: url('../arauca/foto/museo-flip-arauca-intro-01.jpg');
             }
             &._2{
-                background-image: url('../arauca/foto/museo-flip-arauca-intro-02.gif');
+                background-image: url('../arauca/foto/museo-flip-arauca-intro-02.jpg');
             }
             &._3{
                 background-image: url('../arauca/foto/museo-flip-arauca-intro-03.gif');
@@ -672,6 +672,36 @@ div#page_Animation {
     }
 }
 #laterales_cordoba{
+    .bg {
+        position: absolute;
+        width: 130px;
+        display: inline-block;
+        height: 100vh;
+        top: 0;
+        background-size: cover;
+        &.lat_2{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-01.jpg');
+        }
+        &.lat_3{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-02.jpg');
+        }
+        &.lat_4{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-fondo04.jpg');
+        }
+        &.lat_5{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-03.jpg');
+        }
+        &.lat_6{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-04.jpg');
+        }
+        &.lat_7{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-05.jpg');
+        }
+        &.lat_8{
+            background-image: url('../cordoba/foto/museo-flip-cordoba-06.jpg');
+        }
+        
+    }
     .story{
         &.profundizacion {
             background-image: url('../cordoba/foto/museo-flip-cordoba-01.jpg');
