inicio diagramación exposición

--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -12,6 +12,10 @@
 /* Usage */
 section, div, span {
     @media @mobile {
+        #elmuseo .expo {
+            background-color: white;
+            padding: 55px 30px;
+        }
         #elmuseo .creditos .logos img {
             display: block;
         }
