--- a/docs/css/style_dev.less
+++ b/docs/css/style_dev.less
@@ -103,6 +103,27 @@ div[class^="col-"]{
             }
         }
     }
+    .expo{
+        padding: 50px 0;
+        color: lighten(@morado, 10%);
+        h1{
+           color: @morado;
+           font-weight: 800;
+        }
+        .subtitle{
+            font-weight: 600;
+            top: -14px;
+            position: relative;
+        }
+        .izq{
+            z-index: 1;
+        }
+        .mapa {
+            height: 100vh;
+            width: 100vw;
+            z-index: 0;
+        }
+    }
 }
 
 #inicio {
