actualización cambios exposición

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -148,6 +148,12 @@ b.primera {
     margin: 8vh 0;
 }
 
+.logo {
+    position: relative;
+    bottom: 194px;
+    width: 270px;
+    margin: 0 auto;
+}
 
 #home {
     background-image: url('../img/museo-virtual---home-final-2.jpg');
@@ -1032,7 +1038,7 @@ section{
             width: 100vw;
             height: 100vh;
             bottom: 0;
-            top: 10vh;
+            top: 5vh;
             text-align: center;
             .minusculas{
                 font-family: 'Ibarra Real Nova';
@@ -1045,7 +1051,7 @@ section{
                 font-weight: 600;
                 letter-spacing: 1.5px;
                 font-size: 8em;
-                line-height: 1.6em;
+                line-height: 1.1em;
             }
         }
     }
