Página mapa y mobile

--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -12,10 +12,6 @@
 /* Usage */
 section, div, span {
     @media @mobile {
-        #elmuseo .expo {
-            background-color: white;
-            padding: 55px 30px;
-        }
         #elmuseo .creditos .logos img {
             display: block;
         }
@@ -99,5 +95,29 @@ section, div, span {
     }
     @media @desktop, @desktop-xl {
       
+    }
+}
+
+#elmuseo{
+    @media @mobile {
+       .expo {
+           background-color: @crema;
+           display: inline-block;
+           min-height: 100vh;
+           h1{
+            font-size: 2em !important;
+           }
+           .subtitle{
+            font-size: 1.2em;
+           }
+           p {
+                font-size: 1.4em;
+            }
+           .izq {
+                left: 20px;
+                padding: 0 60px 0 10px;
+                position: relative;
+            }
+       }
     }
 }
