--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -11,6 +11,7 @@
  // paleta de color
  @blanco: #ffffff;
  @blanco2: #d1d1d1;
+ @crema: #f2efe6;
  @morado: #2c2327;
  @negro: #000000;
  @azulclaro: #01b5f4;
@@ -1010,6 +1011,48 @@ section{
             &:hover{
                 .punto{
                     background-image: url('../img/arauca-zona.gif');
+                }
+            }
+        }
+        &.cordoba{
+            position: absolute;
+            left: 509px;
+            top: 181px;
+            .punto{
+                background-image: url('../img/cordoba-punto.gif');
+                background-size: contain;
+                width: 260px;
+                min-height: 230px;
+                background-repeat: no-repeat;
+                -webkit-transition: background 1s;
+                -moz-transition: background 1s;
+                -o-transition: background 1s;
+                transition: background 1s;
+            }
+            &:hover{
+                .punto{
+                    background-image: url('../img/cordoba-zona.gif');
+                }
+            }
+        }
+        &.caqueta{
+            position: absolute;
+            left: 427px;
+            top: 623px;
+            .punto{
+                background-image: url('../img/caqueta-punto.gif');
+                background-size: contain;
+                width: 460px;
+                min-height: 300px;
+                background-repeat: no-repeat;
+                -webkit-transition: background 1s;
+                -moz-transition: background 1s;
+                -o-transition: background 1s;
+                transition: background 1s;
+            }
+            &:hover{
+                .punto{
+                    background-image: url('../img/caqueta-zona.gif');
                 }
             }
         }
