limite ancho caja texto mapa

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -974,6 +974,7 @@ section{
             z-index: 1;
             left: 50px;
             position: absolute;
+            max-width: 500px;
         }
     }
 }
