--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -66,7 +66,8 @@ ul.TextComponent--center {
 }
 .TextComponent--left {
     padding-right: 15vw;
-    font-size: 30px;
+    /*font-size: 30px;*/
+    font-size: 1.87rem;
     line-height: 48px;
     left: 0;
     margin-left: 100px;
@@ -196,6 +197,7 @@ b.primera {
         -webkit-transition: all 0.5s ease;
         -moz-transition: all 0.5s ease;
         transition: all 0.5s ease;
+        z-index: 100;
         &:hover{
             background-position: right top; 
             -webkit-transition: all 0.5s ease;
