--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -4,8 +4,8 @@
               ~"only screen and (min--moz-device-pixel-ratio: 1.5)",
               ~"only screen and (-o-min-device-pixel-ratio: 3/2)",
               ~"only screen and (min-device-pixel-ratio: 1.5)";
-@mobile:      ~"only screen and (max-width: 529px)";
-@tablet:      ~"only screen and (min-width: 530px) and (max-width: 949px)";
+@mobile:      ~"only screen and (max-width: 767px)";
+@tablet:      ~"only screen and (min-width: 768px) and (max-width: 949px)";
 @desktop:     ~"only screen and (min-width: 950px) and (max-width: 1128px)";
 @desktop-xl:  ~"only screen and (min-width: 1129px)";
 
@@ -21,7 +21,7 @@ section, div, span {
                 font-size: 1.5em !important;
             }
             .mayusculas {
-                font-size: 3em !important;
+                font-size: 2.8em !important;
             }
         }
         .bg {
@@ -83,12 +83,32 @@ section, div, span {
         .bt-center{
             left: 40vw;
         }
+
+        .ComponentBg.lazyloaded {
+            background-position: center;
+        }
     }
     @media @tablet {
-      
+        #overlay {
+            top: 12vh !important;
+            .minusculas {
+                font-size: 2.3em !important;
+            }
+            .mayusculas {
+                font-size: 3.8em !important;
+            }
+        }
     }
     @media @desktop {
-      
+        #overlay {
+            top: 20vh !important;
+            .minusculas {
+                font-size: 2.3em !important;
+            }
+            .mayusculas {
+                font-size: 3.8em !important;
+            }
+        }
     }
     @media @desktop-xl {
       
