--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -47,9 +47,14 @@ h1{
 .ComponentBgContainer{
     background-color: @morado;
 }
-.ComponentBg.lazyloaded {
+
+div[id*='fullpage-interna-lat_'] .ComponentBg.lazyloaded{
     opacity: 0.7;
 }
+.ComponentBg.lazyloaded {
+    opacity: 1;
+}
+
 .TextComponent--center{
     font-family: 'Libre Franklin', sans-serif !important;
     font-weight: 800 !important;
@@ -79,8 +84,14 @@ ul.TextComponent--center {
     font-weight: 800;
     text-align: center;
     margin: 20px 20vw;
-    font-size: 22px;
+    font-size: 19px;
     line-height: 38px;
+    letter-spacing: 0.3px;
+
+   /* b{
+        font-size: 19px;
+       font-weight: normal;
+    }*/
 }
 .TextComponent--audio {
     text-align: center;
@@ -92,8 +103,9 @@ ul.TextComponent--center {
         background: @morado !important;
     }
 .TextComponent--intro {
-    font-size: 24px;
+    font-size: 19px;
     margin: auto 18vw;
+    letter-spacing: 0.3px;
 }
 
 .ComponentBgContainer iframe {
@@ -135,6 +147,7 @@ b.primera {
     color: #fff;
     margin: 100px 25vw;
     text-align: center;
+    font-size: 19px;
 }
 /* hacks estilos base <<< FIN */
 
@@ -151,10 +164,19 @@ b.primera {
 }
 
 .logo {
-    position: relative;
+   /* position: relative;
     bottom: 194px;
     width: 270px;
+    margin: 0 auto;*/
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     margin: 0 auto;
+    .contentlogo img {
+        text-align: center;
+        display: block;
+        margin: auto;
+    }
 }
 
 #home {
@@ -265,7 +287,7 @@ b.primera {
     text-align: center;
     top: 80vh;
     z-index: 1;
-    left: 50vw;
+    width: 100%;
     svg {
         width: 20px;
         margin-top: 20px;
@@ -277,6 +299,9 @@ b.primera {
         text-transform: uppercase;
         text-decoration: none;
         font-size: 14px;
+        text-align: center;
+        display: block;
+        margin: auto;
         span {
             display: block;
         }
@@ -489,6 +514,9 @@ div#page_Animation {
     z-index: 0;
     &.caqueta{
         background-image: url('../caqueta/foto/museo-flip-caqueta-intro-01.jpg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
         .capa{
             background-position: bottom;
             height: 100vh; 
@@ -497,6 +525,9 @@ div#page_Animation {
             z-index: 2;
             &._1{
                 background-image: url('../caqueta/foto/museo-flip-caqueta-intro-01.gif');
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
             }
             &._2{
                 background-image: url('../caqueta/foto/museo-flip-caqueta-intro-02.gif');
@@ -514,6 +545,9 @@ div#page_Animation {
     }
     &.arauca{
         background-image: url('../arauca/foto/museo-flip-arauca-intro-01.jpg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
         .capa{
             background-position: bottom;
             height: 100vh; 
@@ -522,6 +556,9 @@ div#page_Animation {
             z-index: 2;
             &._1{
                 background-image: url('../arauca/foto/museo-flip-arauca-intro-01.jpg');
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
             }
             &._2{
                 background-image: url('../arauca/foto/museo-flip-arauca-intro-02.jpg');
@@ -535,10 +572,14 @@ div#page_Animation {
             &._5{
                 background-image: url('../arauca/foto/museo-flip-arauca-intro-05.gif');
             }
+            
         }
     }
     &.cordoba{
         background-image: url('../cordoba/foto/museo-flip-cordoba-intro-01.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
         .capa{
             background-position: bottom;
             height: 100vh; 
@@ -547,6 +588,9 @@ div#page_Animation {
             z-index: 2;
             &._1{
                 background-image: url('../cordoba/foto/museo-flip-cordoba-intro-01.gif');
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
             }
             &._2{
                 background-image: url('../cordoba/foto/museo-flip-cordoba-intro-02.gif');
@@ -559,6 +603,14 @@ div#page_Animation {
             }
             &._5{
                 background-image: url('../cordoba/foto/museo-flip-cordoba-intro-05.gif');
+            }
+            &._6{
+                background-image: url('../cordoba/foto/museo-flip-cordoba-intro-06.gif');
+                bottom: 0;
+                position: absolute;
+                background-position: bottom center;
+                background-size: cover;
+            
             }
         }
     }
@@ -1089,19 +1141,21 @@ section{
             .minusculas{
                 font-family: 'Ibarra Real Nova';
                 color: @blanco2;
-                font-size: 3em;
+                font-size: 2.5em;
             }
             .mayusculas{
                 font-family: 'Libre Franklin', sans-serif;
                 text-transform: uppercase;
                 font-weight: 600;
                 letter-spacing: 1.5px;
-                font-size: 8em;
+                font-size: 6em;
                 line-height: 1.1em;
             }
         }
     }
 }
+
+/*-----INDEX------*/
 
 
 /* RESPONSIVE */
