new ajuste css responsive

--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -80,7 +80,9 @@ section, div, span {
         b.primera{
             font-size: 10px;
         }
-        
+        .bt-center{
+            left: 0vw;
+        }
 
         .ComponentBg.lazyloaded {
             background-position: center;
