logo en el menu y link home a exposición

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -355,14 +355,10 @@ b.primera {
         }
     }
     .logomenu {
-        width: 270px;
-        height: 180px;
-        background-image: url('../img/header-menu.png');
-        background-size: cover;
-        margin: 40px 0 20px 55px;
-        &:hover{
-            background-image: url('../img/header-menu-hover.png');
-        }
+        width: 40%;
+        margin: 30px 60px;
+        position: fixed;
+        bottom: 0;
     }
     .logomenu_txt {
         font-size: xx-large;
