ajustes tamaño logos flip en home y menu

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -175,7 +175,9 @@ b.primera {
     .contentlogo img {
         text-align: center;
         display: block;
-        margin: auto;
+        margin: 30px auto;
+        width: 200px;
+        height: auto;
     }
 }
 
@@ -355,7 +357,7 @@ b.primera {
         }
     }
     .logomenu {
-        width: 40%;
+        width: 160px;
         margin: 30px 60px;
         position: fixed;
         bottom: 0;
