--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1008,6 +1008,13 @@ section{
                 letter-spacing: 1px;
                 margin: 0;
             }
+            a, a:active {
+                color: @blanco;
+                text-decoration: none;;
+            }
+            a:hover{
+                color: @azulclaro;
+            }
         }
     }
     .expo{
