--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1032,7 +1032,7 @@ section{
         .izq{
             z-index: 1;
             left: 50px;
-            position: absolute;
+            position: fixed;
             max-width: 500px;
         }
     }
@@ -1055,8 +1055,8 @@ section{
         z-index: 1;
         &.arauca{
             position: absolute;
-            left: 795px;
-            top: 310px;
+            /* left: 795px; */
+            /* top: 310px; */
             .punto{
                 background-image: url('../img/arauca-punto.gif');
                 background-size: contain;
@@ -1076,8 +1076,8 @@ section{
         }
         &.cordoba{
             position: absolute;
-            left: 509px;
-            top: 181px;
+            /* left: 509px; */
+            /* top: 181px; */
             .punto{
                 background-image: url('../img/cordoba-punto.gif');
                 background-size: contain;
@@ -1097,8 +1097,8 @@ section{
         }
         &.caqueta{
             position: absolute;
-            left: 427px;
-            top: 623px;
+            /* left: 427px; */
+            /* top: 623px; */
             .punto{
                 background-image: url('../img/caqueta-punto.gif');
                 background-size: contain;
@@ -1115,6 +1115,23 @@ section{
                     background-image: url('../img/caqueta-zona.gif');
                 }
             }
+        }
+    }
+    .wrap {
+        min-height: 100%;
+        position: relative;
+        overflow: hidden;
+        width: 100vw;
+        .bg {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            background: url('../img/exposicion-mapa.jpg') no-repeat left top;
+            background-size: cover;
+            transform: scale(1.1);
         }
     }
 }
