mayusculas texto home peso 900

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -4,7 +4,7 @@
  */
 
 @import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:200,400,700,800&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,200;0,400;0,600;0,700;0,800;0,900;1,200;1,400;1,600;1,700;1,800&display=swap');
 @import url('animate.css');
 @import url('base.css');
 
@@ -1168,7 +1168,7 @@ section{
             .mayusculas{
                 font-family: 'Libre Franklin', sans-serif;
                 text-transform: uppercase;
-                font-weight: 600;
+                font-weight: 900;
                 letter-spacing: 1.5px;
                 font-size: 6em;
                 line-height: 1.1em;
