Nombre completo expo en menu

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -370,6 +370,15 @@ b.primera {
         line-height: 41px;
         color: @negro;
     }
+    .subtitle {
+        font-family: 'Libre Franklin', sans-serif;
+        font-size: 14px;
+        color: #000000;
+        position: relative;
+        left: 60px;
+        top: -10px;
+        font-weight: 400;
+    }
 }
 .pushmenu {
     background: #f2efe6;
