ajustar tamaño fuente museo, expo y contacto

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -940,7 +940,7 @@ section{
         font-family: 'Libre Franklin', sans-serif;
         text-transform: uppercase;
         letter-spacing: 1px;
-        font-size: 10px;
+        font-size: 14px;
         line-height: 1.6em;
         color: @blanco;
         font-weight: 600;
@@ -955,7 +955,7 @@ section{
         letter-spacing: 1px;
     }
     ul{
-        font-size: 14px;
+        font-size: 15px;
         margin-left: 0px;
         li{
             list-style: none;
@@ -979,11 +979,12 @@ section{
             text-transform: uppercase;
             font-weight: 600;
             letter-spacing: 1.5px;
-            font-size: 11px;
+            font-size: 14px;
             line-height: 1.6em;
         }
         .der {
             margin-top: 30px;
+            font-size: large;
         }
         .logos {
             margin-top: 40px;
@@ -1013,7 +1014,7 @@ section{
             p{
                 font-family: 'Ibarra Real Nova';
                 color: @blanco2;
-                font-size: 20px;
+                font-size: 16px;
                 letter-spacing: 1px;
                 margin: 0;
             }
@@ -1043,6 +1044,9 @@ section{
             left: 50px;
             position: fixed;
             max-width: 500px;
+            .bloque {
+                font-size: 18px;
+            }
         }
     }
 }
