hover style link underline en contacto

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1020,10 +1020,10 @@ section{
             }
             a, a:active {
                 color: @blanco;
-                text-decoration: none;;
+                text-decoration: none;
             }
             a:hover{
-                color: @azulclaro;
+                text-decoration: underline;
             }
         }
     }
