textos creditos alineados izquierda distancia

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -59,6 +59,9 @@ div[id*='fullpage-interna-lat_'] .ComponentBg.lazyloaded{
     font-family: 'Libre Franklin', sans-serif !important;
     font-weight: 800 !important;
     font-size: 16px !important;
+    &.creditos {
+        margin-left: 0px;
+    }
 }
 ul.TextComponent--center {
     font-family: 'Ibarra Real Nova', serif !important;
