--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -303,10 +303,11 @@ b.primera {
         font-weight: 800;
         text-transform: uppercase;
         text-decoration: none;
-        font-size: 14px;
+        font-size: 12px;
         text-align: center;
         display: block;
         margin: auto;
+        letter-spacing: 0.7px;
         span {
             display: block;
         }
