ultimos ajutes_v1 ing

--- a/docs/css/style.less
+++ b/docs/css/style.less
@@ -1270,6 +1270,11 @@ section{
     }
 }
 
+#elmuseo section.buttonset {  
+   /* z-index: 99;*/
+    position: fixed;
+}
+
 .inicio {
     #fp-nav{
         display: none;
