--- a/docs/css/css-breakpoint-mixins.less
+++ b/docs/css/css-breakpoint-mixins.less
@@ -12,6 +12,11 @@
 /* Usage */
 section, div, span {
     @media @mobile {
+        .section .playervideo video {
+            height: auto;
+            width: 75vw;
+            margin-left: 25px;
+        }
         #elmuseo .creditos .logos img {
             display: block;
         }
